--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>OrigaMe! Home page</h1>
+		<h1>OrigaMe! About page</h1>
 		<nav>
 			<ul id="nav-links">
 				<li><a href="index.html">Home</a></li>
