--- a/about.html
+++ b/about.html
@@ -2,26 +2,48 @@
 <html>
 <head>
 	<title>OrigaMe!</title>
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles/aboutstyle.css">
 </head>
 <body>
 	<header>
-		<h1>OrigaMe! About page</h1>
 		<nav>
-			<ul id="nav-links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="tutorial.html">Tutorials</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
+			<div class="navbar">
+				
+				<ul id="nav-links">
+					
+					<li><a href="index.html"><img src="images/1x/Logo.png"></a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="tutorial.html">Tutorials</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
 			<div id="hamburger-menu" onclick="toggleMenu()">
 				<div></div>
 				<div></div>
 				<div></div>
 			</div>
+		</div>
 		</nav>
 	</header>
+	<br>
+	<br>
 	
+	<!--Start of about page for each artist in the group-->
+	<div class="aboutorigame">
+		<div class="origame">
+			<!--Image of logo-->
+			<img src="images/1x/LogoHeart.png">
+		</div>
+		<div class="logotext">
+			<img src="images/1x/LogoText.png">
+		</div>
+		<!--Text content on artist background-->
+		<div class="text">
+			<p>
+				Formed 2024
+			</p>
+		</div>
+	</div>
+
 	<footer>
 		<p>Copyright © 2023 OrigaMe!</p>
 	</footer>
