--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,25 @@
 </head>
 <body>
 	<header>
-		<h1>OrigaMe! Contact page</h1>
 		<nav>
-			<ul id="nav-links">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About</a></li>
-				<li><a href="tutorial.html">Tutorials</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-			<div id="hamburger-menu" onclick="toggleMenu()">
-				<div></div>
-				<div></div>
-				<div></div>
+			<div class="navbar">
+				<ul id="nav-links">
+					<li><a href="index.html"><img src="images/1x/Logo.png"></a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="tutorial.html">Tutorials</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li>
+						<div class="user-icon">
+						<img src="images/icon.png" alt="User Icon">
+					</div>
+				</li>
+				</ul>
+				
+				<div id="hamburger-menu" onclick="toggleMenu()">
+					<div></div>
+					<div></div>
+					<div></div>
+				</div>
 			</div>
 		</nav>
 	</header>
