--- a/about.html
+++ b/about.html
@@ -44,11 +44,30 @@
 					Formed 2024
 				</p>
 			</div>
+			
 
 		<!--Text content on artist background-->
 		
 		</div>
 	</div>
+
+
+	<div class="aboutmalc">
+
+		<!--Same text features-->
+		<div class="malcomtext">
+		  <h2>Malcom Goh</h2>
+		  <h3>Project Leader</h3>
+		  <p>
+			My name is Malcom
+		  </p>
+		</div>
+		<div class="vertical"></div>
+		<div class="malcom">
+		  <img src="images/icon.png">
+		</div>
+		
+	  </div>
 
 	<footer>
 		<p>Copyright © 2023 OrigaMe!</p>
