--- a/about.html
+++ b/about.html
@@ -62,10 +62,27 @@
 			My name is Malcom
 		  </p>
 		</div>
-		<div class="vertical"></div>
 		<div class="malcom">
 		  <img src="images/icon.png">
 		</div>
+		
+	  </div>
+
+
+	  <div class="aboutyeji">
+		<div class="yeji">
+			<img src="images/icon.png">
+		  </div>
+
+		<!--Same text features-->
+		<div class="yejitext">
+		  <h2>Sung Yeji</h2>
+		  <h3>Lead Designer</h3>
+		  <p>
+			My name is Yeji
+		  </p>
+		</div>
+		
 		
 	  </div>
 
