--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
 			</div>
 		</nav>
 	</header>
+
+	<!-- Card Carousell -->
+	<div class="container">
+		<input type="radio" name="slider" id="item-1" checked>
+		<input type="radio" name="slider" id="item-2">
+		<input type="radio" name="slider" id="item-3">
+	  <div class="cards">
+		<label class="card" for="item-1" id="origami-crane">
+		  <img src="images/origami/origami_crane.jpg" alt="crane">
+		</label>
+		<label class="card" for="item-2" id="origami-cat">
+		  <img src="images/origami/origami_cat.jpg" alt="cat">
+		</label>
+		<label class="card" for="item-3" id="origami-tulip">
+		  <img src="images/origami/origami_tulip.jpg" alt="tulip">
+		</label>
+	  </div>
+	</div>
+	
 	
 	<footer>
 		<p>Copyright © 2023 OrigaMe!</p>
