Nav bar fix, contact page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 			</div>
 		</nav>
 	</header>
+	<br>
+	<br>
+	<div class="content">
 
 	<!-- Card Carousell -->
 	<div class="container">
@@ -46,6 +49,7 @@
 		</label>
 	  </div>
 	</div>
+</div>
 	
 
 	<footer>
@@ -53,5 +57,6 @@
 		<p>Copyright © 2023 OrigaMe!</p>
 	</footer>
 	<script src="javascript/hamburger.js"></script>
+	<script src="javascript/carousel.js"></script>
 </body>
 </html>
