--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 	<br>
 	
 	<div class="container">
-		<h1>Simple Contact Form System</h1>
+		<h1>Contact Us Here!</h1>
 		<div id="add-update-msg">
 		  <div class="alert alert-success" role="alert">
 			Contact record successfully added
@@ -67,7 +67,7 @@
 		</div>
 	  </div><!-- end add container -->
 	
-	  <div class="container mt-5">
+	  <div class="tablethread">
 		<h2>Table information of Contacts (<span id="total-contacts"></span>)</h2>
 		<table class="table" id="contact-list">
 		  <thead>
@@ -90,38 +90,10 @@
 			Contact record updated sucessfully
 		  </div>
 		</div>
-		<h4>Update Contact</h4>
-		<div class="form-group">
-		  <label for="update-contact-name">Name</label>
-		  <input type="text" id="update-contact-name" class="form-control" required>
-		</div>
-		<div class="form-group">
-		  <label for="update-contact-email">Email</label>
-		  <input type="text" id="update-contact-email" class="form-control" required>
-		</div>
-		<div class="form-group">
-		  <label for="update-contact-subj">Subject</label>
-		  <input type="text" id="update-contact-subj" class="form-control" required>
-		</div>
-		<div class="form-group">
-		  <label for="update-contact-msg">Message</label>
-		  <input type="number" id="update-contact-msg" class="form-control" required>
-		</div>
-	
-	
-	
-	
-		<input type="hidden" id="update-contact-id">
-	  </div>
-	
-	  <input type="submit" value="Update Contact Details" class="btn btn-warning" id="update-contact-submit">
-	  </form>
+		
 	  </div>
 	  </div>
-	  <script src="/js/popper.min.js"></script>
-	  <script src="/js/bootstrap.min.js"></script>
-	  <script src="contact.js"></script>
-  
+
 </body>
 
 </html>
