--- a/about.html
+++ b/about.html
@@ -27,6 +27,10 @@
 				</div>
 			</div>
 		</nav>
+
+		<div class="aboutus">
+			<h1>About Us</h1>
+		</div>
 	</header>
 	<br>
 	<br>
@@ -52,38 +56,74 @@
 	</div>
 
 
-	<div class="aboutmalc">
+	<div class="aboutgoals">
 
 		<!--Same text features-->
-		<div class="malcomtext">
+		<div class="goals">
 		  <h2>Malcom Goh</h2>
 		  <h3>Project Leader</h3>
 		  <p>
 			My name is Malcom
 		  </p>
 		</div>
-		<div class="malcom">
+		<div class="goalsimg">
 		  <img src="images/icon.png">
 		</div>
 		
 	  </div>
 
 
-	  <div class="aboutyeji">
-		<div class="yeji">
+	  <div class="aboutvision">
+		<div class="visionimg">
 			<img src="images/icon.png">
 		  </div>
 
 		<!--Same text features-->
-		<div class="yejitext">
+		<div class="vision">
 		  <h2>Sung Yeji</h2>
-		  <h3>Lead Designer</h3>
+		  <h3>Head of Design</h3>
 		  <p>
 			My name is Yeji
 		  </p>
 		</div>
-		
-		
+	  </div>
+	  <br>
+	  <br>
+
+	  <div class="team">
+		<h1>Our Team</h1>
+		<br>
+		<div class="aboutgoals">
+
+			<!--Same text features-->
+			<div class="goals">
+			  <h2>Our Goals</h2>
+			  <p>
+				My name is Malcom
+			  </p>
+			</div>
+			<div class="goalsimg">
+			  <img src="images/icon.png">
+			</div>
+			
+		  </div>
+	
+	
+		  <div class="aboutvision">
+			<div class="visionimg">
+				<img src="images/icon.png">
+			  </div>
+	
+			<!--Same text features-->
+			<div class="vision">
+			  <h2>Our Vision</h2>
+			  <p>
+				My name is Yeji
+			  </p>
+			</div>
+		  </div>
+
+		</div>
 	  </div>
 
 	<footer>
