--- a/about.html
+++ b/about.html
@@ -1,94 +1,134 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OrigaMe!</title>
-	<link rel="stylesheet" type="text/css" href="styles/aboutstyle.css">
+ <title>OrigaMe!</title>
+ <link rel="stylesheet" type="text/css" href="styles/aboutstyle.css">
 </head>
 <body>
-	<header>
-		<nav>
-			<div class="navbar">
-				<ul id="nav-links">
-					<li><a href="index.html"><img src="images/1x/Logo.png"></a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="tutorial.html">Tutorials</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li>
-						<div class="user-icon">
-						<img src="images/icon.png" alt="User Icon">
-					</div>
-				</li>
-				</ul>
-				
-				<div id="hamburger-menu" onclick="toggleMenu()">
-					<div></div>
-					<div></div>
-					<div></div>
-				</div>
-			</div>
-		</nav>
-	</header>
-	<br>
-	<br>
-	
-	<!--Start of about page for each artist in the group-->
-	<div class="aboutorigame">
-		<div class="origame">
-			<!--Image of logo-->
-			<img src="images/1x/LogoHeart.png">
-		</div>
-		<div class="logotext">
-			<img src="images/1x/LogoText.png">
-			<div class="text">
-				<p>
-					Formed 2024
-				</p>
-			</div>
-			
+ <header>
+  <nav>
+   <div class="navbar">
+    <ul id="nav-links">
+     <li><a href="index.html"><img src="images/1x/Logo.png"></a></li>
+     <li><a href="about.html">About</a></li>
+     <li><a href="tutorial.html">Tutorials</a></li>
+     <li><a href="contact.html">Contact</a></li>
+     <li>
+      <div class="user-icon">
+      <img src="images/icon.png" alt="User Icon">
+     </div>
+    </li>
+    </ul>
+    
+    <div id="hamburger-menu" onclick="toggleMenu()">
+     <div></div>
+     <div></div>
+     <div></div>
+    </div>
+   </div>
+  </nav>
 
-		<!--Text content on artist background-->
-		
-		</div>
-	</div>
+  <div class="aboutus">
+   <h1>About Us</h1>
+  </div>
+ </header>
+ <br>
+ <br>
+ 
+ <!--Start of about page for each artist in the group-->
+ <div class="aboutorigame">
+  <div class="origame">
+   <!--Image of logo-->
+   <img src="images/1x/LogoHeart.png">
+  </div>
+  <div class="logotext">
+   <img src="images/1x/LogoText.png">
+   <div class="text">
+    <p>
+     Formed 2024
+    </p>
+   </div>
+   
 
-
-	<div class="aboutmalc">
-
-		<!--Same text features-->
-		<div class="malcomtext">
-		  <h2>Malcom Goh</h2>
-		  <h3>Project Leader</h3>
-		  <p>
-			My name is Malcom
-		  </p>
-		</div>
-		<div class="malcom">
-		  <img src="images/icon.png">
-		</div>
-		
-	  </div>
+  <!--Text content on artist background-->
+  
+  </div>
+ </div>
 
 
-	  <div class="aboutyeji">
-		<div class="yeji">
-			<img src="images/icon.png">
-		  </div>
+ <div class="aboutgoals">
 
-		<!--Same text features-->
-		<div class="yejitext">
-		  <h2>Sung Yeji</h2>
-		  <h3>Lead Designer</h3>
-		  <p>
-			My name is Yeji
-		  </p>
-		</div>
-		
-		
-	  </div>
+  <!--Same text features-->
+  <div class="goals">
+    <h2>Malcom Goh</h2>
+    <h3>Project Leader</h3>
+    <p>
+   My name is Malcom
+    </p>
+  </div>
+  <div class="goalsimg">
+    <img src="images/icon.png">
+  </div>
+  
+   </div>
 
-	<footer>
-		<p>Copyright © 2023 OrigaMe!</p>
-	</footer>
-	<script src="javascript/hamburger.js"></script>
+
+   <div class="aboutvision">
+  <div class="visionimg">
+   <img src="images/icon.png">
+    </div>
+
+  <!--Same text features-->
+  <div class="vision">
+    <h2>Sung Yeji</h2>
+    <h3>Head of Design</h3>
+    <p>
+   My name is Yeji
+    </p>
+  </div>
+   </div>
+   <br>
+   <br>
+
+   <div class="team">
+  <h1>Our Team</h1>
+  <br>
+  <div class="aboutgoals">
+
+   <!--Same text features-->
+   <div class="goals">
+     <h2>Our Goals</h2>
+     <p>
+    My name is Malcom
+     </p>
+   </div>
+   <div class="goalsimg">
+     <img src="images/icon.png">
+   </div>
+   
+    </div>
+ 
+ 
+    <div class="aboutvision">
+   <div class="visionimg">
+    <img src="images/icon.png">
+     </div>
+ 
+   <!--Same text features-->
+   <div class="vision">
+     <h2>Our Vision</h2>
+     <p>
+    My name is Yeji
+     </p>
+   </div>
+    </div>
+
+  </div>
+   </div>
+
+ <footer>
+  <p>Copyright © 2023 OrigaMe!</p>
+ </footer>
+ <script src="javascript/hamburger.js"></script>
 </body>
 </html>
