--- a/about.html
+++ b/about.html
@@ -61,8 +61,7 @@
 
   <!--Same text features-->
   <div class="goals">
-    <h2>Malcom Goh</h2>
-    <h3>Project Leader</h3>
+    <h2>Our Goal</h2>
     <p>
    My name is Malcom
     </p>
@@ -81,8 +80,7 @@
 
   <!--Same text features-->
   <div class="vision">
-    <h2>Sung Yeji</h2>
-    <h3>Head of Design</h3>
+    <h2>Our Vision</h2>
     <p>
    My name is Yeji
     </p>
@@ -94,30 +92,32 @@
    <div class="team">
   <h1>Our Team</h1>
   <br>
-  <div class="aboutgoals">
+  <div class="aboutmalc">
 
    <!--Same text features-->
-   <div class="goals">
-     <h2>Our Goals</h2>
+   <div class="malcom">
+     <h2>Malcom Goh</h2>
+	 <h3>Project Leader</h3>
      <p>
     My name is Malcom
      </p>
    </div>
-   <div class="goalsimg">
+   <div class="malcimg">
      <img src="images/icon.png">
    </div>
    
     </div>
  
  
-    <div class="aboutvision">
-   <div class="visionimg">
+    <div class="aboutyeji">
+   <div class="yejiimg">
     <img src="images/icon.png">
      </div>
  
    <!--Same text features-->
-   <div class="vision">
+   <div class="yeji">
      <h2>Our Vision</h2>
+	 <h3>Head of Design</h3>
      <p>
     My name is Yeji
      </p>
