Contact page layout

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 	<br>
 	
 	<div class="container">
-		<h1>Contact Us Here!</h1>
+		<h1>Contact Us</h1>
 		<div id="add-update-msg">
 		  <div class="alert alert-success" role="alert">
 			Contact record successfully added
@@ -41,31 +41,54 @@
 		<div class="form" id="add-contact">
 		  <form id="add-contact-form">
 			<div class="form-group">
-			  <label for="contact-name">Name</label>
-			  <input type="text" id="contact-name" class="form-control" required>
+			  <input type="text" id="contact-name" class="form-control" required placeholder="Name">
 			</div>
+			<br>
 			<div class="form-group">
-			  <label for="contact-email">Email</label>
-			  <input type="text" id="contact-email" class="form-control" required>
+			  <input type="text" id="contact-email" class="form-control" required placeholder="Email">
 			</div>
-	
+			<br>
 			<div class="form-group">
-			  <label for="contact-subj">Subject</label>
-			  <input type="text" id="contact-subj" class="form-control" required>
+			  <input type="text" id="contact-subj" class="form-control" required placeholder="Subject">
 			</div>
-	
+			<br>
 			<div class="form-group">
-			  <label for="contact-msg">Message</label>
-			  <input type="text" id="contact-msg" class="form-control" required>
+			  <input type="text" id="contact-msg" class="form-control" required placeholder="Enter Message">
 			</div>
-	
-			
-			
+			<br>
 	
 			<input type="submit" value="Send" class="btn btn-primary" id="contact-submit">
+
 		  </form>
+		  <br>
 		</div>
-	  </div><!-- end add container -->
+	  </div>
+
+	  <br>
+	  <br>
+
+	  <div class="faq-container">
+		<div class="faq">
+		  <div class="faq-column">
+
+			<h2>FAQ</h2>
+			<ol>
+			  <li>Qn1</li>
+			  <li>Qn2</li>
+			</ol>
+		  </div>
+		  <div class="vertical-line"></div>
+		  <div class="contact">
+
+			<h2>Contacts</h2>
+			<ul>
+			  <li>Email:</li>
+			  origaME@gmail.com
+			</ul>
+		  </div>
+		</div>
+	</div>
+
 	
 	  <div class="tablethread">
 		<h2>Table information of Contacts (<span id="total-contacts"></span>)</h2>
