--- a/tutorial.html
+++ b/tutorial.html
@@ -136,41 +136,52 @@
 					<!-- Tutorial Gallery -->
 					<div class="grid grid-cols-2 md:grid-cols-3 gap-4 px-10 py-10">
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="images/origami/crane" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/crane.jpg" alt="Crane Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Crane</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/bluebell flower.jpg" alt="BlueBell Flower">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">BlueBell Flower</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/cat.jpg" alt="Cat Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Cat</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/fox.jpg" alt="Fox Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Fox</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/butterfly.jpg" alt="Butterly Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Butterfly</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-5.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/frog.jpg" alt="Frog Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Frog</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-6.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/whale.jpg" alt="Whale Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Whale</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-7.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/hat.jpg" alt="Hat Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Hat</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-8.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/heart.jpg" alt="Heart Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Heart</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-9.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/daylily.jpg" alt="Daylily Flower Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Daylily Flower</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-10.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/simpleflower.jpg" alt="Simple Flower Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Simple Flower</h1>
 						</div>
 						<div>
-							<img class="h-auto max-w-full rounded-lg" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-11.jpg" alt="">
+							<img class="h-auto max-w-full rounded-lg" src="images/origami/grass.jpg" alt="Grass Origami">
+							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Grass</h1>
 						</div>
 					</div>
 
