--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OrigaMe!</title>
+	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="styles/aboutstyle.css">
 	<script src="https://cdn.tailwindcss.com"></script>
 	<!-- <style>
@@ -200,7 +200,7 @@
      </p>
    </div>
    <div class="malcimg">
-     <img src="images/malc.jpg">
+     <img src="images/malcom.jpg">
    </div>
    
     </div>
@@ -208,7 +208,7 @@
  
     <div class="aboutyeji">
    <div class="yejiimg">
-    <img src="images/yeji.JPG">
+    <img src="images/yeji.jpg">
      </div>
  
    <!--Same text features-->
