--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OrigaMe!</title>
+	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="styles/aboutstyle.css">
 	<script src="https://cdn.tailwindcss.com"></script>
 	<!-- <style>
