--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
 		<input type="radio" name="slider" id="item-3">
 	  <div class="cards">
 		<label class="card" for="item-1" id="origami-crane">
-		  <img src="images/origami/origami_crane.jpg" alt="crane">
+		  <img src="images/origami/crane.jpg" alt="crane">
 		</label>
 		<label class="card" for="item-2" id="origami-cat">
-		  <img src="images/origami/origami_cat.jpg" alt="cat">
+		  <img src="images/origami/cat.jpg" alt="cat">
 		</label>
 		<label class="card" for="item-3" id="origami-tulip">
-		  <img src="images/origami/origami_tulip.jpg" alt="tulip">
+		  <img src="images/origami/tulip.jpg" alt="tulip">
 		</label>
 	  </div>
 	</div>
