--- a/tutorial.html
+++ b/tutorial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OrigaMe!</title>
+	<title>Tutorials</title>
 	<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
 	<script src="https://cdn.tailwindcss.com"></script>
 
