--- a/login.html
+++ b/login.html
@@ -124,26 +124,32 @@
 
 <section class="screen">
 	<div class="container">
-	  <div class="loginimg">
-		<img src="images/login.png">
+	  <div class="loginimg-container">
+		<div class="loginimg">
+		  <img src="images/login.png">
+		</div>
 	  </div>
-	  <form>
-		<div class="form-group">
-		  <label for="email">Email:</label>
-		  <input type="text" id="email" class="form-control" required placeholder="Email">
-		</div>
-		<div class="form-group">
-		  <label for="pass">Password:</label>
-		  <input type="password" id="pass" class="form-control" required placeholder="Password">
-		</div>
-		<div class="form-group">
-		  <input type="submit" value="Send" class="btn btn-primary" id="contact-submit">
-		</div>
-	  </form>
+	  <div class="form-container">
+		<form>
+		  <div class="form-group">
+			<label for="email">Email:</label>
+			<input type="text" id="email" class="form-control" required placeholder="Email">
+		  </div>
+		  <div class="form-group">
+			<label for="pass">Password:</label>
+			<input type="password" id="pass" class="form-control" required placeholder="Password">
+		  </div>
+		  <div class="form-group">
+			<input type="submit" value="Send" class="btn btn-primary" id="contact-submit">
+		  </div>
+		</form>
+	  </div>
+	  <div class="register-link">
+		<p>Don't have an account? <a href="register.html">Register here</a></p>
+	  </div>
 	</div>
-  </div>
   </section>
-
+  
 <footer>
 <footer class="bg-white dark:bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
