Login api part 1

--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
 	<title>OrigaMe!</title>
 	<link rel="stylesheet" type="text/css" href="styles/login.css">
+	<script src="javascript/login.js"></script>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<!-- <style>
 		@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Heebo:wght@500&family=Inter:wght@400;500;600;700;800&family=Public+Sans:wght@600&family=Roboto:wght@400;900&display=swap');
@@ -137,15 +138,15 @@
 		  </div>
 		  <div class="form-group">
 			<label for="pass">Password:</label>
-			<input type="password" id="pass" class="form-control" required placeholder="Password">
+			<input type="password" id="password" class="form-control" required placeholder="Password">
 		  </div>
 		  <div class="form-group">
-			<input type="submit" value="Send" class="btn btn-primary" id="contact-submit">
+			<input type="submit" value="Send" class="btn btn-primary" id="formsubmitbtn">
 		  </div>
 		</form>
 	  </div>
 	  <div class="register-link">
-		<p>Don't have an account? <a href="register.html">Register here</a></p>
+		<p>Don't have an account? <a href="registration.html">Register here</a></p>
 	  </div>
 	</div>
   </section>
