--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 					-->
 					<div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
 					  <!-- Active: "bg-gray-100", Not Active: "" -->
-					  <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
+					  <a href="login.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Login</a>
 					  <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
 					  <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
 					</div>
@@ -195,7 +195,7 @@
      <h2>Malcom Goh</h2>
 	 <h3>Project Leader</h3>
      <p>
-    Hey, I am Malcom. I am the Project Leader or some might say the Founder of origaME!. I'm an independent and self-motivated individual with new ideas to bring, able to adapt to new challenges
+    Hey, I am Malcom. I am the Project Leader of origaME!. I'm an independent and self-motivated individual with new ideas to bring, able to adapt to new challenges
     and tends to carry out tasks to the best of my own abilities!
      </p>
    </div>
@@ -214,9 +214,9 @@
    <!--Same text features-->
    <div class="yeji">
      <h2>Sung Yeji</h2>
-	 <h3>Head of Design</h3>
+	 <h3>Founder</h3>
      <p>
-    Hey! I am Yeji. I'm an avid designer with a passion for programming and a heart for volunteering. 
+    Hey! I am Yeji. I'm the Founder of origaMe! and also an avid designer with a passion for programming and a heart for volunteering. 
     Connect with me to leave a mark of positive change in the world, with one pixel and a line of code at a time!
      </p>
    </div>
