--- a/login.html
+++ b/login.html
@@ -131,7 +131,7 @@
 		</div>
 	  </div>
 	  <div class="form-container">
-		<form>
+		<form name="login">
 		  <div class="form-group">
 			<label for="email">Email:</label>
 			<input type="text" id="email" class="form-control" required placeholder="Email">
