--- a/login.html
+++ b/login.html
@@ -133,8 +133,8 @@
 	  <div class="form-container">
 		<form name="login">
 		  <div class="form-group">
-			<label for="email">Email:</label>
-			<input type="text" id="email" class="form-control" required placeholder="Email">
+			<label for="email">Username:</label>
+			<input type="text" id="username" class="form-control" required placeholder="Email">
 		  </div>
 		  <div class="form-group">
 			<label for="pass">Password:</label>
