--- a/tutorial.html
+++ b/tutorial.html
@@ -113,7 +113,7 @@
 	<body>
 		
 		<div class="containter">
-			<div class="text-left px-56">
+			<div class="text-left px-50">
 				<h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">Tutorials</h1>
 				
 				<!-- Dropdown Button - Categories -->
@@ -134,52 +134,52 @@
 					</div>
 					
 					<!-- Tutorial Gallery -->
-					<div class="grid grid-cols-2 md:grid-cols-3 gap-4 px-5 py-10">
-						<a href="crane.html" class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+					<div class="grid grid-cols-2 md:grid-cols-3 gap-4 px-10 py-10">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/crane.jpg" alt="Crane Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Crane</h1>
-						</a>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						</div>
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/bluebell flower.jpg" alt="BlueBell Flower">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">BlueBell Flower</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/cat.jpg" alt="Cat Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Cat</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/fox.jpg" alt="Fox Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Fox</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/butterfly.jpg" alt="Butterly Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Butterfly</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/frog.jpg" alt="Frog Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Frog</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/whale.jpg" alt="Whale Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Whale</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/hat.jpg" alt="Hat Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Hat</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/heart.jpg" alt="Heart Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Heart</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/daylily.jpg" alt="Daylily Flower Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Daylily Flower</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/simpleflower.jpg" alt="Simple Flower Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Simple Flower</h1>
 						</div>
-						<div class="bg-fixed opacity-100 transition duration-300 ease-in-out hover:opacity-20">
+						<div>
 							<img class="h-auto max-w-full rounded-lg" src="images/origami/grass.jpg" alt="Grass Origami">
 							<h1 class="text-base font-bold tracking-tight text-gray-900 sm:text-2xl py-3 px-5">Grass</h1>
 						</div>
