--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<title>OrigaMe!</title>
 	<link rel="stylesheet" type="text/css" href="styles/contactstyle.css">
+	<script src="javascript/signout.js"></script>
 </head>
 <body>
 	<header>
