--- a/crane_upload.html
+++ b/crane_upload.html
@@ -122,44 +122,95 @@
 	
 	<br>
 	<br>
-	<div class="content">
+	<!-- Breadcrumbs -->
+<nav class="flex px-28 py-11" aria-label="Breadcrumb">
+    <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+      <li class="inline-flex items-center">
+        <a href="#" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+          <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
+          </svg>
+          Home
+        </a>
+      </li>
+      <li>
+        <div class="flex items-center">
+          <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+          <a href="tutorial.html" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Tutorials</a>
+        </div>
+      </li>
+      <li aria-current="page">
+        <div class="flex items-center">
+          <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+          <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Crane</span>
+        </div>
+      </li>
+      <li aria-current="page">
+        <div class="flex items-center">
+          <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+          <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Completion</span>
+        </div>
+      </li>
+	  <li aria-current="page">
+        <div class="flex items-center">
+          <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+          <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Upload</span>
+        </div>
+      </li>
+    </ol>
+  </nav>
 
-	<!-- Card Carousell -->
-	<div class="container">
-		<div class="text-center">
-			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Ready to fold paper into art?</h1>
-			<p class="mt-6 text-lg leading-8 text-gray-600">Unleah your magic with OrigaME!</p>
-			<div class="mt-10 flex items-center justify-center gap-x-6">
-			  <a href="tutorial.html" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
-			   focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Look at tutorials</a>
-			  <a href="about.html" class="text-sm font-semibold leading-6 text-gray-900">About OrigaME! <span aria-hidden="true">→</span></a>
-			</div>
-		  </div>
-		<input type="radio" name="slider" id="item-1" checked>
-		<input type="radio" name="slider" id="item-2">
-		<input type="radio" name="slider" id="item-3">
-	  <div class="cards">
-		<label class="card" for="item-1" id="origami-crane">
-		  <img src="images/origami/crane.jpg" alt="crane">
-		</label>
-		<label class="card" for="item-2" id="origami-cat">
-		  <img src="images/origami/cat.jpg" alt="cat">
-		</label>
-		<label class="card" for="item-3" id="origami-tulip">
-		  <img src="images/origami/tulip.jpg" alt="tulip">
-		</label>
-	  </div>
-	</div>
-</div>
+      <!-- Title -->
+      <div class="container">
+        <div class="text-left px-56">
+            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Now, scan it to collect points!</h1>
+			
+			<!-- File Upload Button -->
+			<div class="flex items-center justify-center w-full">
+				<label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
+					<div class="flex flex-col items-center justify-center pt-5 pb-6">
+						<svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+							<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
+						</svg>
+						<p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click to upload</span> or drag and drop</p>
+						<p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
+					</div>
+					<input id="dropzone-file" type="file" class="hidden" />
+				</label>
+			</div> 
 
-<!-- Collect Badges -->
-<div class="container">
-	<div class="text-right">
-		<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Collect Badges!</h1>
-	</div>
+        </div>
+    </div>
 
-</div>
-	
+        <!-- Previous & Next & No Thanks Button -->
+        <div class="container flex justify-center content-center">
+            <!-- Previous Button -->
+            <a href="crane_end1.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+            <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+            </svg>
+            Previous
+            </a>
+
+			<a href="tutorial.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+				No Thanks
+			</a>
+
+            <a href="review_page.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+            Next
+            <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+            </svg>
+            </a>
+        </div>
 
 	<footer>
 <footer class="bg-white dark:bg-gray-900">
