crane.html buttons fixed

--- a/review_page.html
+++ b/review_page.html
@@ -275,6 +275,14 @@
             </span>
             </li>
         </ul>
+
+        
+        <form class="max-w-sm mx-auto">
+            <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 
+            focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
+            placeholder="Leave a review..."></textarea>
+        </form>
+  
                     
 
                 </div>
@@ -294,12 +302,11 @@
                         No Thanks
                     </a>
 
-                    <a href="crane_upload.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                    Next
-                    <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                    </svg>
-                    </a>
+                    <div class="flex items-stretch h-screen">
+                        <div class="self-center flex-1 text-center">
+                            <button id="button" type="submit" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Submit</button>
+                        </div> 
+                    </div>
                 </div>
 
 	<footer>
