--- a/crane_stepbystep.html
+++ b/crane_stepbystep.html
@@ -4,6 +4,9 @@
 	<title>Crane Origami</title>
 	<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
 	<script src="https://cdn.tailwindcss.com"></script>
+    <!-- TW Elements is free under AGPL, with commercial license required for specific uses. See more details: https://tw-elements.com/license/ and contact us for queries at tailwind@mdbootstrap.com --> 
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
+
 
 </head>
 <body>
