--- a/pointtest.html
+++ b/pointtest.html
@@ -4,10 +4,8 @@
 	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="styles/contactstyle.css">
 	<script src="https://cdn.tailwindcss.com"></script>
-  <script src="javascript/signout.js"></script>
-  <script src="javascript/contact.js"></script>
-
-
+  	<script src="javascript/signout.js"></script>
+	<script src="javascript/points.js"></script>
 </head>
 <body>
 
@@ -108,68 +106,13 @@
 		  </nav>
 		  
 	</header>
-	<div class="container">
-		<h1>Contact Us</h1>
-		<div id="add-update-msg">
-		  <div class="alert alert-success" role="alert">
-		  </div>
-		</div>
-		<div class="form" id="add-contact">
-		  <form id="add-contact-form">
-			<div class="form-group">
-			  <input type="text" id="name" class="form-control" required placeholder="Name">
-			</div>
-			<br>
-			<div class="form-group">
-			  <input type="text" id="email" class="form-control" required placeholder="Email">
-			</div>
-			<br>
-			<div class="form-group">
-			  <input type="text" id="subj" class="form-control" required placeholder="Subject">
-			</div>
-			<br>
-			<div class="form-group">
-			  <input type="text" id="msg" class="form-control" required placeholder="Enter Message">
-			</div>
-			<br>
 	
-			<input type="submit" value="Send" class="btn btn-primary" id="formsubmitbtn">
-
-		  </form>
-		  <br>
-		</div>
-	  </div>
-
-	  <br>
-	  <br>
-
-	  <div class="faq-container">
-		<div class="faq">
-		  <div class="faq-column">
-
-			<h2>FAQ</h2>
-			<ol>
-			  <li>Qn1</li>
-			  <li>Qn2</li>
-			</ol>
-		  </div>
-		  <div class="vertical-line"></div>
-		  <div class="contact">
-
-			<h2>Contacts</h2>
-			<ul>
-			  <li>Email:</li>
-			  origaME@gmail.com
-			</ul>
-		  </div>
-		</div>
-	</div>
+    <button class="claim" id="claim">Points</button>
 
 
-</body>
 
 </html>
-	
+
 	<footer class="bg-white dark:bg-gray-900">
 		<div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
 			<div class="md:flex md:justify-between">
@@ -253,6 +196,8 @@
 			  </div>
 		  </div>
 		</div>
+	
 	</footer>
 	</body>
+    <script src="javascript/points.js"></script>
 	</html>
