--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/aboutstyle.css">
 	<script src="https://cdn.tailwindcss.com"></script>
   <script src="javascript/signout.js"></script>
+  <script src="javascript/points.js"></script>
 
 
 </head>
@@ -214,6 +215,7 @@
      </p>
    </div>
     </div>
+    <button class="claim" id="claim">Points</button>
 
   </div>
    </div>
