--- a/contact.html
+++ b/contact.html
@@ -144,27 +144,18 @@
 	  <br>
 
 	  <div class="faq-container">
-		<div class="faq">
-		  <div class="faq-column">
-
-			<h2>FAQ</h2>
-			<ol>
-			  <li>Qn1</li>
-			  <li>Qn2</li>
-			</ol>
-		  </div>
-		  <div class="vertical-line"></div>
-		  <div class="contact">
-
-			<h2>Contacts</h2>
-			<ul>
-			  <li>Email:</li>
-			  origaME@gmail.com
-			</ul>
-		  </div>
-		</div>
-	</div>
-
+		<h1>FAQ</h1>
+		<br>
+		<details>
+		  <summary>Who founded origaME!</summary>
+		  <p>Sung Yejoy</p>
+		</details>
+		<details>
+		  <summary>What can I do with points?</summary>
+		  <p>Points can be redeemed for rewards through this <a href="rewards.html">page!</a></p>
+		</details>
+		<!-- Add more FAQ items as needed -->
+	  </div>
 
 </body>
 
