--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 				  </button>
 				</div>
 				<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-				  <div class="flex flex-shrink-0 items-center">
-					<img class="h-15 w-auto" src="images/origame_logo.png" alt="Your Company">
-				  </div>
+					<a href="index.html">
+						<img class="h-15 w-auto" src="images/origame_logo.png" alt="Your Company">
+					  </a>
 				  <div class="hidden sm:ml-6 sm:block">
 					<div class="flex space-x-4">
 					  <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
@@ -249,7 +249,7 @@
 	<script>
 		const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
 		const userPoints = localStorage.setItem('points',0)
-		console.log(data)
+		
 
 		if (loggedInUser && loggedInUser.userLogged) {
 			const userName= loggedInUser.username;
