Point allocation done

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 			const userName= loggedInUser.username;
 			const userPassword = loggedInUser.password; 
 
-			alert(`Welcome ${userName}, you are logged in <3`);
+			alert(`Welcome ${userName}, you are logged in`);
 
 		} else {
 			const confirmLogout = confirm("You are not logged in. Do you want to go to the login page?");
