--- a/contact.html
+++ b/contact.html
@@ -108,37 +108,78 @@
 		  </nav>
 		  
 	</header>
-	<div class="container">
-		<h1>Contact Us</h1>
-		<div id="add-update-msg">
-		  <div class="alert alert-success" role="alert">
+	<!--
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ],
+  }
+  ```
+-->
+<div class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
+	<div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
+	  <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+	</div>
+	<div class="mx-auto max-w-2xl text-center">
+	  <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Contact sales</h2>
+	  <p class="mt-2 text-lg leading-8 text-gray-600">Aute magna irure deserunt veniam aliqua magna enim voluptate.</p>
+	</div>
+	<form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
+	  <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+		<div class="sm:col-span-2">
+		  <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Name</label>
+		  <div class="mt-2.5">
+			<input type="text" name="name" id="name" autocomplete="name" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
 		  </div>
 		</div>
-		<div class="form" id="add-contact">
-		  <form id="add-contact-form">
-			<div class="form-group">
-			  <input type="text" id="name" class="form-control" required placeholder="Name">
+		<div class="sm:col-span-2">
+		  <label for="email" class="block text-sm font-semibold leading-6 text-gray-900">Email</label>
+		  <div class="mt-2.5">
+			<input type="email" name="email" id="email" autocomplete="email" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+		  </div>
+		</div>
+		<div class="sm:col-span-2">
+			<label for="subj" class="block text-sm font-semibold leading-6 text-gray-900">Subject</label>
+			<div class="mt-2.5">
+			  <input type="text" name="subj" id="subj" autocomplete="subj" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
 			</div>
-			<br>
-			<div class="form-group">
-			  <input type="text" id="email" class="form-control" required placeholder="Email">
-			</div>
-			<br>
-			<div class="form-group">
-			  <input type="text" id="subj" class="form-control" required placeholder="Subject">
-			</div>
-			<br>
-			<div class="form-group">
-			  <input type="text" id="msg" class="form-control" required placeholder="Enter Message">
-			</div>
-			<br>
-	
-			<input type="submit" value="Send" class="btn btn-primary" id="formsubmitbtn">
-
-		  </form>
-		  <br>
+			  <svg class="pointer-events-none absolute right-3 top-0 h-full w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+				<path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+			  </svg>
+		</div>
+		<div class="sm:col-span-2">
+		  <label for="message" class="block text-sm font-semibold leading-6 text-gray-900">Message</label>
+		  <div class="mt-2.5">
+			<textarea name="msg" id="msg" rows="4" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+		  </div>
+		</div>
+		<div class="flex gap-x-4 sm:col-span-2">
+		  <div class="flex h-6 items-center">
+			<!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
+			<button type="button" class="bg-gray-200 flex w-8 flex-none cursor-pointer rounded-full p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" role="switch" aria-checked="false" aria-labelledby="switch-1-label">
+			  <span class="sr-only">Agree to policies</span>
+			  <!-- Enabled: "translate-x-3.5", Not Enabled: "translate-x-0" -->
+			  <span aria-hidden="true" class="translate-x-0 h-4 w-4 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
+			</button>
+		  </div>
+		  <label class="text-sm leading-6 text-gray-600" id="switch-1-label">
+			By selecting this, you agree to our
+			<a href="#" class="font-semibold text-indigo-600">privacy&nbsp;policy</a>.
+		  </label>
 		</div>
 	  </div>
+	  <div class="mt-10">
+		<button type="submit" id="formsubmitbtn" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Let's talk</button>
+	  </div>
+	</form>
+  </div>
+  
 
 	  <br>
 	  <br>
